# PastePrime

./: .flake8  PastePrime.spec  README.md  autostart.py  hotkey.py  keyboard.py  main.py  pyproject.toml
